--- a/style.css
+++ b/style.css
@@ -144,3 +144,24 @@
     cursor: default;
     color:#777;
 }
+.str {
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    width: 150px;
+    height: 50px;
+    background-color: rgba(255, 255, 255, 0.7);
+    z-index: 1;
+    font-size: 12px;
+}
+
+.dst {
+    position: absolute;
+    top: 80px;
+    right: 10px;
+    width: 150px;
+    height: 50px;
+    background-color: rgba(255, 255, 255, 0.7);
+    z-index: 1;
+    font-size: 12px;
+}
