--- a/style.css
+++ b/style.css
@@ -1,3 +1,273 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+.radius_border {
+    border: 1px solid #919191;
+    border-radius: 5px;
+}
+
+.custom_control span {
+    display: block;
+    text-align: center;
+    cursor: pointer;
+}
+
+.gps_btn {
+    position: absolute;
+    top: 70px;
+    right: 30px;
+    width: 36px;
+    overflow: hidden;
+    z-index: 1;
+    background-color: #f5f5f5;
+}
+
+.gps_btn span img {
+    width: 20px;
+    height: 20px;
+    padding: 7px 0 4px 0;
+    border: none;
+}
+
+.sidebar_open_btn {
+    position: absolute;
+    top: 50px;
+    left: 30px;
+    width: 60px;
+    height: 50px;
+    padding-top: 5px;
+    overflow: hidden;
+    z-index: 1;
+    background-color: #f5f5f5;
+    cursor: pointer;
+    font-size: 30px;
+    color:rgb(34, 204, 140);
+    font-family: 'Times New Roman', Times, serif;
+}
+.sidebar_open_btn:hover {
+    background:rgb(34, 204, 140);
+    color: white;
+    transition: 0.3s;
+}
+
+.sidebar_open_btn span img {
+    margin-top: 2px;
+    width: 50px;
+    height: 40px;
+}
+
+/*마커 선택 사이드바*/
+#subSidebar_2{
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    color:rgb(34, 204, 140);
+}
+/*마커 선택 확인 버튼*/
+#checkbtn {
+    background-color: rgb(34, 204, 140);
+
+    color:#fff;
+ 
+    text-align: center;
+    border: none;
+    cursor: pointer;
+}
+
+.zoom_btn span {
+    width: 36px;
+    height: 40px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.zoom_btn {
+    position: absolute;
+    top: 120px;
+    right: 30px;
+    width: 36px;
+    height: 80px;
+    overflow: hidden;
+    z-index: 1;
+    background-color: #f5f5f5;
+}
+
+.zoom_btn span img {
+    width: 15px;
+    height: 15px;
+    padding: 12px 0;
+    border: none;
+}
+
+.zoom_btn span:first-child {
+    border-bottom: 1px solid #bfbfbf;
+}
+
+.siren_btn {
+    position: absolute;
+    bottom: 220px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    z-index: 1;
+    background-color: #f5f5f5;
+}
+
+.siren_btn span img {
+    width: 30px;
+    height: 30px;
+    padding: 8px 0;
+    border: none;
+}
+
+.call_btn {
+    position: absolute;
+    bottom: 160px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    z-index: 1;
+    background-color: #f5f5f5;
+}
+.call_btn span img {
+    width: 30px;
+    height: 30px;
+    padding: 9px 0;
+    border: none;
+}
+
+.sms_btn {
+    position: absolute;
+    bottom: 100px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    z-index: 1;
+    background-color: #f5f5f5;
+}
+.sms_btn span img {
+    width: 30px;
+    height: 30px;
+    padding: 9px 0;
+    border: none;
+}
+
+#map {
+    width: 100%;
+    height: 100vh;
+}
+
+
+#sidebar {
+    height: 100%;
+    width: 0px;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    background-color: white;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 20px;
+    border: 1px solid #919191;
+  }
+  
+.subSidebar a, .subSidebar p{
+    padding: 8px 8px 8px 12px;
+    text-decoration: none;
+    font-size: 25px;
+    color: rgb(34, 204, 140);
+    display: block;
+    transition: 0.3s;
+  }
+ 
+
+  .sidebar_close_btn{
+    width: 70px;
+    height: 70px;
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    color: rgb(34,204,140);
+    cursor: pointer;
+}
+
+.menu {
+    width: 70px;
+    height: 70px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    color: rgb(34,204,140);
+    cursor: pointer;
+}
+
+.menu img {
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: auto;
+    width: 30px;
+    height: 30px;
+}
+.menu:hover{
+    background: rgb(34, 204, 140);
+    color: white;
+}
+
+  .subSidebar {
+    height: 100%;
+    width: 0px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 70px;
+    background-color: white;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 30px;
+  }
+
+  .contents {
+    width: 280px;
+}
+
+
+  #intro {
+    /*그라데이션 배경*/
+    font-family: "Jua";
+    background: #114357;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #DEF6CD, #C4F1DF);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #DEF6CD, #C4F1DF);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    /*중앙 정렬*/
+    justify-content: center;
+    align-items: center;
+    /* 절대위치 */
+    position: absolute;
+    top: 0;
+    left: 0;
+    /*아이템들을 세로 방향으로 배치*/
+    flex-direction: column;
+    z-index: 3;
+}
+.title {
+        margin-bottom: 40px;
+        font-size: 5em;
+        color: white;
+    }
+
+
+/*길찾기 Style*/
 .map_wrap, .map_wrap * {
     margin:0;
     padding:0;
@@ -149,7 +419,7 @@
     top: 20px;
     right: 10px;
     width: 150px;
-    height: 50px;
+    height: 80px;
     background-color: rgba(255, 255, 255, 0.7);
     z-index: 1;
     font-size: 12px;
@@ -157,11 +427,20 @@
 
 .dst {
     position: absolute;
-    top: 80px;
+    top: 110px;
     right: 10px;
     width: 150px;
-    height: 50px;
+    height: 80px;
     background-color: rgba(255, 255, 255, 0.7);
     z-index: 1;
     font-size: 12px;
+}
+
+.searchbutton {
+    background-color: rgb(34, 204, 140);
+    color: white;
+    font-weight: bold;
+    width: 80px;
+    height: 25px;
+    margin-top: 5px;
 }
