--- a/style.css
+++ b/style.css
@@ -284,13 +284,10 @@ body {
     height:500px;
 }
 #menu_wrap {
-    position:absolute;
-    top:0;
-    left:0;
-    bottom:0;
+    position:relative;
     width:280px;
     overflow-y:auto;
-    background:rgba(255, 255, 255, 0.7);
+    background:rgba(43, 203, 140, 0.1);
     z-index: 1;
     font-size:12px;
     border-radius: 10px;
